# e2e-clinical-llmops

./: .gitignore  README.md  download_test.py  fix_ssl.py  main.py  pyproject.toml
backend/: .env.example  app.py  config.py  schemas.py  worker.py
backend/core/: async_runtime.py  celery_app.py  config.py  decorators.py  load_models.py  local_storage.py  logger.py  redis_client.py  redis_client_sync.py
backend/prompts/: __init__.py  certificate.py  discharge.py  referral.py  role_service.py  scribe_system.py  soap.py
backend/repositories/: buffer.py  conversation.py  documents.py  metrics.py  notification.py  session.py
backend/routers/: documents.py  feedback.py  ingest.py  session.py
backend/services/: feedback_service.py  guardrail_service.py  guardrails.py  llm_handler.py  pii_handler.py  role_service.py  safety.py  session_service.py  transcriber.py
backend/tasks/: documents.py  ingest.py
backend/tests/services/: test_role_service.py  test_safety.py  test_transcriber.py
data_pipeline/: config.py  run_pipeline.sh  schema.py
data_pipeline/dedup/: CustomDedup.py  path.py  pipeline.py
data_pipeline/formatting/: build_dataset.py
data_pipeline/parsing/: __main__.py  io.py  parse.py  runner.py  transform.py
data_pipeline/qa/: quality_check.py
data_pipeline/utils/: normalization.py  typing.py
frontend/: .env.example  api_client.py  app.py  callbacks.py  session_manager.py
frontend/components/: audio_recorder.py  note_display.py  transcript_display.py
frontend/mock/: mock_llm.py
frontend/styles/: __init__.py
frontend/views/: controls.py  documents.py  landing.py  page.py  sidebar.py  transcript.py
notebooks/: colab.ipynb
