[project]
name = "medical-scribe"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=1.12.0",
    "dotenv>=0.9.9",
    "en-core-web-lg",
    "fastapi>=0.122.0",
    "numpy<2",
    "presidio-analyzer>=2.2.360",
    "presidio-anonymizer>=2.2.360",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "requests>=2.32.5",
    "sentence-transformers>=5.1.2",
    "spacy>=3.8.11",
    "torch==2.2.2",
    "transformers>=4.57.3",
    "uvicorn>=0.38.0",
]

[tool.uv.sources]
en-core-web-lg = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_lg-3.8.0/en_core_web_lg-3.8.0-py3-none-any.whl" }
