[project]
name = "e2e-clinical-llmops"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.12.0",
    "aiofiles>=25.1.0",
    "celery[redis]>=5.3.1",
    "datatrove>=0.3.0",
    "dotenv>=0.9.9",
    "en-core-web-lg",
    "fastapi>=0.122.0",
    "nest-asyncio>=1.6.0",
    "nltk>=3.9.2",
    "numpy<2",
    "orjson>=3.11.5",
    "outlines>=0.0.46",
    "presidio-analyzer>=2.2.360",
    "presidio-anonymizer>=2.2.360",
    "pyairports",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "pyngrok>=7.5.0",
    "python-levenshtein>=0.27.3",
    "redis>=7.1.0",
    "requests>=2.32.5",
    "sentence-transformers>=5.1.2",
    "spacy>=3.8.11",
    "spyder-kernels==3.0",
    "streamlit>=1.52.1",
    "torch==2.4.0",
    "torchvision>=0.19.0",
    "transformers>=4.57.3",
    "uvicorn>=0.38.0",
    "vllm>=0.6.3.post1",
    "whisperx>=3.3.1",
]

[tool.uv.sources]
en-core-web-lg = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_lg-3.8.0/en_core_web_lg-3.8.0-py3-none-any.whl" }
pyairports = { git = "https://github.com/NICTA/pyairports.git" }

[dependency-groups]
dev = [
    "pytest>=9.0.1",
]
